fix bug 27023, change master password doesn't work in mail